# RAG_template

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.dev.txt  requirements.txt  simple_RAG.ipynb
demo_data/: web_weirdos.md
docker/: docker-compose.demo.yaml  docker-compose.ollama.yaml  docker-compose.yaml
docs/: data_flow.md  generative_search.md
notebooks/: simple_RAG.ipynb  upload_journal_chunks.ipynb
scripts/: clear_weaviate_collection.py  embed_and_upload_data.py  embed_user_entries.py
src/: router.py
src/rag_router/: router.py  server.py
src/tests/: test_router.py
tests/: test_router.py
